style(accountModal): alignment, fixed widths

--- a/app/film-database/features/account/_fdAccountModal.scss
+++ b/app/film-database/features/account/_fdAccountModal.scss
@@ -71,7 +71,7 @@
             display: flex;
             flex-direction: column;
             gap: var(--fd-gap);
-            width: 100%;
+            width: calc(400px * 2 + var(--fd-gap));
             &[data-visible='false'] {
               display: none;
             }
@@ -97,13 +97,16 @@
             }
             & ul {
               gap: calc(var(--fd-gap) * 1.5);
-              max-width: 1000px;
               padding-bottom: calc(var(--fd-gap) * 2.25);
               &[data-registry] {
                 display: grid;
-                grid-template-columns: repeat(2, minmax(0, 1fr));
+                gap: var(--fd-gap);
+                grid-template-columns: repeat(2, minmax(0, 400px));
                 grid-template-rows: repeat(4, auto);
                 & li {
+                  & > * {
+                    width: 100%;
+                  }
                   &:nth-of-type(1) {
                     grid-area: 1 / 1 / 2 / 2;
                   }
@@ -143,6 +146,9 @@
               &[data-signin] {
                 display: flex;
                 flex-direction: column;
+                & li {
+                  max-width: calc(400px + var(--fd-gap) / 2);
+                }
                 & button:nth-child(3) {
                   justify-content: flex-start;
                   padding: 0.25em 0.5em;
@@ -175,7 +181,7 @@
               white-space: nowrap;
               & button:nth-child(1) {
                 display: block;
-                width: fit-content;
+                width: 100%;
                 background-color: hsl(239, 97%, 62%);
                 transition: all ease-in-out 120ms;
                 &:hover {
